cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_52.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb64ede.c:58: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb64ede.c:58:9: Write of unused value
56.           iv = &(*ivec)[0];
57.           l2c(v0, iv);
58.           l2c(v1, iv);
              ^
59.       }
60.       v0 = v1 = ti[0] = ti[1] = 0;
